Adds myfitnesspal data processing
This is mostly AI bs. To be refactored.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
   "pyoxigraph",
   "pydantic",
   "openpyxl",
-  "matplotlib"
+  "matplotlib",
 ]
 [tool.setuptools]
 package-dir = { "" = "src" }
